Cancel the ongoing animation for repeat power button releases.

Should cancel the stated showing menu animation for repeat power button
releases. Otherwise, the ongoing animation will run the callback function
SetShowMenuAnimationDone to start |pre_shutdown_timer_|
OnImplicitAnimationFinished after release the power button. This will lead
to device power off.

Bug: 831915
Change-Id: I07753f4156dfc7ba299c37f8fd7a7551d5ec858a
Reviewed-on: https://chromium-review.googlesource.com/1009485
Reviewed-by: Dan Erat <derat@chromium.org>
Reviewed-by: Qiang Xu <warx@google.com>
Commit-Queue: Min Chen <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550509}
Former-commit-id: 1e39dd5b993222f251ad451884f2408bdbe77cb9